Added MaxReffile Option + implementation, Added autoselect of fastest time

--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -6,3 +6,4 @@ showremainingdistance = true ; Show remaining distance to finish (Show remaining
 showfuel = true ; Show fuel remaining; "true" or "false"
 debugmode = false ; Debug Mode (Show some additional counters (overrides fuel status)); "true" or "false"
 language = English ; Language; "English", "Spanish", "French", "German"
+maximumreffiles=0 ; Maximum Referencefiles (per car/track combo, when a new file is created and the limit is surpassed the slowest will be deleted [0 means infinite]); from 0 to 35
