--- a/config/config.ini
+++ b/config/config.ini
@@ -6,5 +6,7 @@ showremainingdistance=true
 showfuel=true
 debugmode=false
 language=English
-maximumreffiles=3
+maximumreffiles=5
+deltadecimals=2
+resetcar=82
 
