--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -8,4 +8,4 @@ debugmode = false ; Debug Mode (Show some additional counters (overrides fuel st
 language = English ; Language; "English", "Spanish", "French", "German"
 maximumreffiles=0 ; Maximum Reference files (per car/track combo, when a new file is created and the limit is surpassed the slowest will be deleted [0 means infinite]); from 0 to 35
 deltadecimals=2 ; Delta Decimals (tenths/hundredths/thousandths of a second); 1,2,3
-resetcar=R; Reset Car (key); keyboard button
+resetcar=82; Reset Car (key); keyboard button
