Improved delta accuracy; changed readme to markdown

--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -7,5 +7,5 @@ showfuel = true ; Show fuel remaining; "true" or "false"
 debugmode = false ; Debug Mode (Show some additional counters (overrides fuel status)); "true" or "false"
 language = English ; Language; "English", "Spanish", "French", "German"
 maximumreffiles=0 ; Maximum Reference files (per car/track combo, when a new file is created and the limit is surpassed the slowest will be deleted [0 means infinite]); from 0 to 35
-deltadecimals=2 ; Delta Decimals (tenths/hundredths/thousandths of a second); 1,2,3
+deltadecimals=3 ; Delta Decimal Digits (Tenths/Hundredths/Thousandths of a second); 1,2,3
 resetcar=82; Reset Car (key); keyboard button
