Add reset to track via wheel button
also reorganized config

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,12 +1,23 @@
-[RallyTiming]
+[STARTVERIFICATION]
 startspeedlimit=15
 maxstartlinedistance=0.5
 showstartspeed=true
+
+[GUIOPTIONS]
 showremainingdistance=true
 showfuel=true
-debugmode=false
 language=English
+
+[OTHERSETTINGS]
 maximumreffiles=10
 deltadecimals=2
-resetcar=82
+debugmode=false
+
+[RESETKEY]
+resetkey=82
+
+[RESETWHEEL]
+EnableWheelButton=False
+wheelid=1
+buttonid=1
 
