--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -1,11 +1,29 @@
-[RallyTiming]
+[STARTVERIFICATION]
+;Start verification
 startspeedlimit = 15 ; Start speed limit (Measured speed in ACSM trap may be up to 2kmh higher! Default value in ACSM is set to 15kmh - Value in ACSM results.lua must be in m/s!); from 1 km/h to 250 km/h
 maxstartlinedistance = 0.5 ; Max distance to startline(in meters, within what distance start status will turn green/ready to start); from 0.05 m to 3 m
 showstartspeed = true ; Show speed on startline crossing (Show speed on startline crossing as measured in speed trap when online); "true" or "false"
+
+[GUIOPTIONS]
+;GUI options
 showremainingdistance = true ; Show remaining distance to finish (Show remaining distance to finish in meters); "true" or "false"
 showfuel = true ; Show fuel remaining; "true" or "false"
-debugmode = false ; Debug Mode (Show some additional counters (overrides fuel status)); "true" or "false"
 language = English ; Language; "English", "Spanish", "French", "German"
+
+[OTHERSETTINGS]
+;Other settings
 maximumreffiles=10 ; Maximum Reference files (per car/track combo, when a new file is created and the limit is surpassed the slowest will be deleted [0 means infinite]); from 0 to 35
-deltadecimals=2 ; Delta Decimal Digits (Tenths/Hundredths/Thousandths of a second); 1,2,3
-resetcar=82; Reset Car (key); keyboard button
+deltadecimals=2 ; Delta Decimals (tenths/hundredths/thousandths of a second); 1,2,3
+debugmode = false ; Debug Mode (Show some additional counters (overrides fuel status)); "true" or "false"
+
+[RESETKEY]
+;Reset car to track key
+__HINT_TOP=Reset works in offline play only, in practice or hotlap mode. Track requires AI line
+resetkey=82; Key; keyboard button
+
+[RESETWHEEL]
+;Reset car to track wheel button
+__HINT_TOP=Find out device & button ID on Settings > AC > Controls > Controllers in the right top corner. Device at the top = 1, Button ID will highlight when pressed
+EnableWheelButton=False; ; "True" or "False"
+wheelid=1; Wheel ID; 1,2,3,4; only with EnableWheelButton
+buttonid=1; Button ID; 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30; only with EnableWheelButton
