added config settings

--- a/config/config.ini
+++ b/config/config.ini
@@ -21,3 +21,15 @@ EnableWheelButton=False
 wheelid=1
 buttonid=1
 
+[PROGRESSBAR]
+progresssplits=true
+progressbarheight=600
+progressbarwidth=6
+progresstransparency=100
+
+[SPLITS]
+splitnumber=3
+splitnotifications=true
+splitnotificationduration=3
+splitnotificationsize=100
+
