--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -27,3 +27,16 @@ __HINT_TOP=Find out device & button ID on Settings > AC > Controls > Controllers
 EnableWheelButton=False; ; "True" or "False"
 wheelid=1; Wheel ID; 1,2,3,4; only with EnableWheelButton
 buttonid=1; Button ID; 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30; only with EnableWheelButton
+
+[PROGRESSBAR]
+;Progress bar
+progresssplits = true ; Show splits; "true" or "false"
+progressbarheight = 600; Height ; from 300 to 1000
+progressbarwidth = 6; Width ; from 3 to 60
+progresstransparency = 100 ; Transparency; from 10% to 100%
+
+[SPLITS]
+splitnumber = 3; Number; from 1 to 11, roundto 1
+splitnotifications = true ; Notifications; "true" or "false"
+splitnotificationduration = 3 ; Notification duration (in seconds); from 1 to 10, roundto 1
+splitnotificationsize = 100 ; Notification size; from 50% to 200%
