keep spit notification over finish, add scalability

--- a/config/config.ini
+++ b/config/config.ini
@@ -25,11 +25,10 @@ buttonid=1
 progresssplits=true
 progressbarheight=600
 progressbarwidth=6
-progresstransparency=100
+progresstransparency=30
 
 [SPLITS]
 splitnumber=3
-splitnotifications=true
 splitnotificationduration=3
 splitnotificationsize=100
 
