--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -30,13 +30,13 @@ buttonid=1; Button ID; 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,
 
 [PROGRESSBAR]
 ;Progress bar
-progresssplits = true ; Show splits; "true" or "false"
-progressbarheight = 600; Height ; from 300 to 1000
-progressbarwidth = 6; Width ; from 3 to 60
-progresstransparency = 100 ; Transparency; from 10% to 100%
+progresssplits = true ; Show delta time on splits; "true" or "false"
+progressbarheight = 600; Height (default = 600) ; from 300 to 1000
+progressbarwidth = 6; Width (default = 6) ; from 3 to 60
+progresstransparency = 30 ; Transparency (default = 30); from 10% to 100%
 
 [SPLITS]
-splitnumber = 3; Number; from 1 to 11, roundto 1
-splitnotifications = true ; Notifications; "true" or "false"
-splitnotificationduration = 3 ; Notification duration (in seconds); from 1 to 10, roundto 1
+; Splits
+splitnumber = 3 ; Number (default = 3); from 1 to 10, roundto 1
+splitnotificationduration = 3 ; Notification duration (in seconds, default = 3); from 1 to 10, roundto 1
 splitnotificationsize = 100 ; Notification size; from 50% to 200%
