various fixes, rearrange buttons

--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -37,6 +37,8 @@ progresstransparency = 30 ; Transparency (default = 30); from 10% to 100%
 
 [SPLITS]
 ; Splits
+__HINT_TOP= Progress bar must be active for split delta notifications
 splitnumber = 3 ; Number (default = 3); from 1 to 10, roundto 1
 splitnotificationduration = 3 ; Notification duration (in seconds, default = 3); from 1 to 10, roundto 1
 splitnotificationsize = 100 ; Notification size; from 50% to 200%
+splitnotificationtransparency = 5 ; Notification transparency (transparency of the window, default = 5); from 0% to 100%
