--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -30,7 +30,7 @@ buttonid=1; Button ID; 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,
 
 [PROGRESSBAR]
 ;Progress bar
-progresssplits = true ; Show delta time on splits; "true" or "false"
+progresssplits = true ; Show splits; "true" or "false"
 progressbarheight = 600; Height (default = 600) ; from 300 to 1000
 progressbarwidth = 6; Width (default = 6) ; from 3 to 60
 progresstransparency = 30 ; Transparency (default = 30); from 10% to 100%
