refl frequency first attempt + some other fixes

--- a/config/config.ini
+++ b/config/config.ini
@@ -12,6 +12,7 @@ language=English
 maximumreffiles=10
 deltadecimals=2
 debugmode=false
+reffilerefreshrate=50
 
 [RESETKEY]
 resetkey=82
@@ -28,7 +29,7 @@ progressbarwidth=6
 progresstransparency=30
 
 [SPLITS]
-splitnumber=3
+splitnumber=7
 splitnotificationduration=3
 splitnotificationsize=100
 splitnotificationtransparency=5
