--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -14,6 +14,7 @@ language = English ; Language; "English", "Spanish", "French", "German"
 ;Other settings
 maximumreffiles=10 ; Maximum Reference files (per car/track combo, when a new file is created and the limit is surpassed the slowest will be deleted [0 means infinite]); from 0 to 35
 deltadecimals=2 ; Delta Decimals (tenths/hundredths/thousandths of a second); 1,2,3
+reffilerefreshrate = 50 ; Reference point refresh rate (Max points per second; more means higher precision but larger reference files); from 10 to 100
 debugmode = false ; Debug Mode (Show some additional counters (overrides fuel status)); "true" or "false"
 
 [RESETKEY]
