--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -14,7 +14,7 @@ language = English ; Language; "English", "Spanish", "French", "German"
 ;Other settings
 maximumreffiles=10 ; Maximum Reference files (per car/track combo, when a new file is created and the limit is surpassed the slowest will be deleted [0 means infinite]); from 0 to 35
 deltadecimals=2 ; Delta Decimals (tenths/hundredths/thousandths of a second); 1,2,3
-reffilerefreshrate = 50 ; Reference point refresh rate (Max points per second; more means higher precision but larger reference files); from 10 to 100
+reffilerefreshrate = 60 ; Reference point refresh rate (Number points per second saved; more means higher precision but larger reference files); from 10 to 100
 debugmode = false ; Debug Mode (Show some additional counters (overrides fuel status)); "true" or "false"
 
 [RESETKEY]
@@ -39,7 +39,7 @@ progresstransparency = 30 ; Transparency (default = 30); from 10% to 100%
 [SPLITS]
 ; Splits
 __HINT_TOP= Progress bar must be active for split delta notifications
-splitnumber = 3 ; Number (default = 3); from 1 to 10, roundto 1
+splitnumber = 7 ; Number (default = 3); from 1 to 10, roundto 1
 splitnotificationduration = 3 ; Notification duration (in seconds, default = 3); from 1 to 10, roundto 1
 splitnotificationsize = 100 ; Notification size; from 50% to 200%
 splitnotificationtransparency = 5 ; Notification transparency (transparency of the window, default = 5); from 0% to 100%
