several checks on replay files & previous fixes

--- a/config/config.ini
+++ b/config/config.ini
@@ -9,16 +9,16 @@ showfuel=true
 language=English
 
 [OTHERSETTINGS]
-maximumreffiles=10
+maximumreffiles=5
 deltadecimals=2
-debugmode=false
 reffilerefreshrate=60
+debugmode=false
 
 [RESETKEY]
 resetkey=82
 
 [RESETWHEEL]
-EnableWheelButton=False
+enablewheelbutton=False
 wheelid=1
 buttonid=1
 
@@ -29,8 +29,14 @@ progressbarwidth=6
 progresstransparency=30
 
 [SPLITS]
-splitnumber=3
+splitnumber=7
 splitnotificationduration=3
 splitnotificationsize=100
 splitnotificationtransparency=5
+
+[REPLAY]
+replaysave=true
+replayintro=3
+replayoutro=2
+replaylocation=unknown
 
