--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -12,21 +12,21 @@ language = English ; Language; "English", "Spanish", "French", "German"
 
 [OTHERSETTINGS]
 ;Other settings
-maximumreffiles=10 ; Maximum Reference files (per car/track combo, when a new file is created and the limit is surpassed the slowest will be deleted [0 means infinite]); from 0 to 35
+maximumreffiles=5 ; Maximum Reference files (per car/track combo, when a new file is created and the limit is surpassed the slowest will be deleted [0 means infinite]); from 0 to 35
 deltadecimals=2 ; Delta Decimals (tenths/hundredths/thousandths of a second); 1,2,3
 reffilerefreshrate = 60 ; Reference point refresh rate (Number points per second saved; more means higher precision but larger reference files); from 10 to 100
 debugmode = false ; Debug Mode (Show some additional counters (overrides fuel status)); "true" or "false"
 
 [RESETKEY]
 ;Reset car to track key
-__HINT_TOP=Reset works in offline play only, in practice or hotlap mode. Track requires AI line
+__HINT_TOP=Reset works in offline play only, in practice or hotlap mode. CSP is required, and track requires AI line
 resetkey=82; Key; keyboard button
 
 [RESETWHEEL]
 ;Reset car to track wheel button
 __HINT_TOP=Find out device & button ID on Settings > AC > Controls > Controllers in the right top corner. Device at the top = 1, Button ID will highlight when pressed
-EnableWheelButton=False; ; "True" or "False"
-wheelid=1; Wheel ID; 1,2,3,4; only with EnableWheelButton
+enablewheelbutton=False; ; "True" or "False"
+wheelid=1; Wheel ID; 1,2,3,4; only with enablewheelbutton
 buttonid=1; Button ID; 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30; only with EnableWheelButton
 
 [PROGRESSBAR]
@@ -39,7 +39,15 @@ progresstransparency = 30 ; Transparency (default = 30); from 10% to 100%
 [SPLITS]
 ; Splits
 __HINT_TOP= Progress bar must be active for split delta notifications
-splitnumber = 3 ; Number (default = 3); from 1 to 10, roundto 1
+splitnumber = 7 ; Number (default = 3); from 1 to 10, roundto 1
 splitnotificationduration = 3 ; Notification duration (in seconds, default = 3); from 1 to 10, roundto 1
 splitnotificationsize = 100 ; Notification size; from 50% to 200%
 splitnotificationtransparency = 5 ; Notification transparency (transparency of the window, default = 5); from 0% to 100%
+
+[REPLAY]
+; Replay autosave
+__HINT_TOP= When enabled, a replay file is saved for every completed lap & stored in a separate replay folder structure. The number of replay files per car/track combo will be trimmed to the same number as the refence files.
+replaysave = true ; Automatically save replays; "true" or "false"
+replayintro = 3; Seconds before start; 1,2,3,4,5,6; only with replaysave
+replayoutro = 2; Seconds after finish; 1,2,3,4,5,6; only with replaysave
+replaylocation = unknown; Replay folder location (Informational! Folder location is provided by the game); 
