Replay files now get deleted together with their corresponding reffiles

--- a/config/config.ini
+++ b/config/config.ini
@@ -9,7 +9,7 @@ showfuel=true
 language=English
 
 [OTHERSETTINGS]
-maximumreffiles=5
+maximumreffiles=1
 deltadecimals=2
 reffilerefreshrate=60
 debugmode=false
@@ -38,5 +38,5 @@ splitnotificationtransparency=5
 replaysave=true
 replayintro=3
 replayoutro=2
-replaylocation=unknown
+replaylocation=C:\Program Files\Steam\steamapps\common\assettocorsa\apps\python\RallyTiming\replays
 
