fix for wheelbutton

--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -26,8 +26,7 @@ resetkey=82; Key; keyboard button
 ;Reset car to track wheel button
 __HINT_TOP=Find out device & button ID on Settings > AC > Controls > Controllers in the right top corner. Device at the top = 1, Button ID will highlight when pressed
 enablewheelbutton=False; ; "True" or "False"
-wheelid=1; Wheel ID; 1,2,3,4; only with enablewheelbutton
-buttonid=1; Button ID; 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30; only with EnableWheelButton
+buttonid=1; Button ID; 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30; only with enablewheelbutton
 
 [PROGRESSBAR]
 ;Progress bar
