--- a/config/config.ini
+++ b/config/config.ini
@@ -9,7 +9,7 @@ showfuel=true
 language=English
 
 [OTHERSETTINGS]
-maximumreffiles=1
+maximumreffiles=5
 deltadecimals=2
 reffilerefreshrate=60
 debugmode=false
@@ -29,7 +29,7 @@ progressbarwidth=6
 progresstransparency=30
 
 [SPLITS]
-splitnumber=7
+splitnumber=3
 splitnotificationduration=3
 splitnotificationsize=100
 splitnotificationtransparency=5
@@ -38,5 +38,5 @@ splitnotificationtransparency=5
 replaysave=true
 replayintro=3
 replayoutro=2
-replaylocation=C:\Program Files\Steam\steamapps\common\assettocorsa\apps\python\RallyTiming\replays
+replaylocation=unknown
 
