--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -3,6 +3,8 @@
 startspeedlimit = 15 ; Start speed limit (Measured speed in ACSM trap may be up to 2kmh higher! Default value in ACSM is set to 15kmh - Value in ACSM results.lua must be in m/s!); from 1 km/h to 250 km/h
 maxstartlinedistance = 0.5 ; Max distance to startline(in meters, within what distance start status will turn green/ready to start); from 0.05 m to 3 m
 showstartspeed = true ; Show speed on startline crossing (Show speed on startline crossing as measured in speed trap when online); "true" or "false"
+lasttrack = unknown ; Last track (Informational! Provided by the game); 
+detectedstartspline = unknown ; Start spline position for last track (Informational! Provided by the game - enter this value as speed trap in ACSM); 
 
 [GUIOPTIONS]
 ;GUI options
@@ -26,7 +28,8 @@ resetkey=82; Key; keyboard button
 ;Reset car to track wheel button
 __HINT_TOP=Find out device & button ID on Settings > AC > Controls > Controllers in the right top corner. Device at the top = 1, Button ID will highlight when pressed
 enablewheelbutton=False; ; "True" or "False"
-buttonid=1; Button ID; 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30; only with enablewheelbutton
+wheelid=1; Wheel ID; 1,2,3,4; only with enablewheelbutton
+buttonid=1; Button ID; 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30; only with EnableWheelButton
 
 [PROGRESSBAR]
 ;Progress bar
@@ -38,7 +41,7 @@ progresstransparency = 30 ; Transparency (default = 30); from 10% to 100%
 [SPLITS]
 ; Splits
 __HINT_TOP= Progress bar must be active for split delta notifications
-splitnumber = 3 ; Number (default = 3); from 1 to 10, roundto 1
+splitnumber = 7 ; Number (default = 3); from 1 to 10, roundto 1
 splitnotificationduration = 3 ; Notification duration (in seconds, default = 3); from 1 to 10, roundto 1
 splitnotificationsize = 100 ; Notification size; from 50% to 200%
 splitnotificationtransparency = 5 ; Notification transparency (transparency of the window, default = 5); from 0% to 100%
