windows don't spawn above each other anymore

--- a/config/config.ini
+++ b/config/config.ini
@@ -2,6 +2,8 @@
 startspeedlimit=15
 maxstartlinedistance=0.5
 showstartspeed=true
+lasttrack=unknown
+detectedstartspline=unknown
 
 [GUIOPTIONS]
 showremainingdistance=true
