Added import/export options (atm pathes have to be entered manually)

--- a/config/config.ini
+++ b/config/config.ini
@@ -42,3 +42,9 @@ replayintro=3
 replayoutro=2
 replaylocation=unknown
 
+[IMEXPORTING]
+import=false
+importpath=none_set
+export=false
+exportpath=none_set
+
