--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -52,4 +52,11 @@ __HINT_TOP= When enabled, a replay file is saved for every completed lap & store
 replaysave = true ; Automatically save replays; "true" or "false"
 replayintro = 3; Seconds before start; 1,2,3,4,5,6; only with replaysave
 replayoutro = 2; Seconds after finish; 1,2,3,4,5,6; only with replaysave
-replaylocation = unknown; Replay folder location (Informational! Folder location is provided by the game); 
+replaylocation = unknown; Replay folder location (Informational! Folder location is provided by the game)
+
+[IMEXPORTING]
+; Reference file importing and exporting
+import = false; Import files from set folder; "true" or "false"
+importpath = none_set; Folder to import files from ; directory ; only with import
+export = false; Export files to set folder; "true" or "false"
+exportpath = none_set ; Folder to export to ; file ; only with export
