a shared folder is now used for importing and exporting

--- a/config/config.ini
+++ b/config/config.ini
@@ -44,7 +44,6 @@ replaylocation=unknown
 
 [IMEXPORTING]
 import=false
-importpath=none_set
 export=false
-exportpath=none_set
+importexportpath=none_set
 
