--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -56,7 +56,6 @@ replaylocation = unknown; Replay folder location (Informational! Folder location
 
 [IMEXPORTING]
 ; Reference file importing and exporting
+importexportpath = none_set; Folder to import/export files from ; directory
 import = false; Import files from set folder; "true" or "false"
-importpath = none_set; Folder to import files from ; directory ; only with import
 export = false; Export files to set folder; "true" or "false"
-exportpath = none_set ; Folder to export to ; file ; only with export
