--- a/config/config_defaults.ini
+++ b/config/config_defaults.ini
@@ -55,7 +55,7 @@ replayoutro = 2; Seconds after finish; 1,2,3,4,5,6; only with replaysave
 replaylocation = unknown; Replay folder location (Informational! Folder location is provided by the game)
 
 [IMEXPORTING]
-; Reference file importing and exporting
+; Replay & Reference file importing and exporting
 importexportpath = none_set; Folder to import/export files from ; directory
 import = false; Import files from set folder; "true" or "false"
 export = false; Export files to set folder; "true" or "false"
